(executables
  (names
    background
    browser_action
    content_script
    test_runner)
  (modes js)
  (libraries
    js_of_ocaml
    js_of_ocaml-lwt
    gen_js_api
    webtest
    webtest-js
    chrome_ext)
  (preprocess
    (pps
      js_of_ocaml-ppx
      lwt_ppx)))

(rule
  (targets message.ml)
  (deps message.mli)
  (action (run %{bin:gen_js_api} %{deps})))

(rule
  (targets webtest_tests.ml)
  (deps webtest_tests.mli)
  (action (run %{bin:gen_js_api} %{deps})))
